--- a/template/page-case-seletora-mudas-flores.html
+++ b/template/page-case-seletora-mudas-flores.html
@@ -213,13 +213,7 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg video-background pv-40 dark-translucent-bg hovered">
-        <div class="video-background-poster" style="background-image: url('');"></div>
-        <video autoplay loop muted style="top: auto; bottom: 0; left: 0;" poster="">
-          <source src="videos/video-case-1.mp4" type="video/mp4">
-          <source src="videos/background-video.webm" type="video/webm">
-        </video>
-        
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-case-2-banner.png'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
@@ -240,8 +234,8 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6 text-justify mb-30">
-                <p>Para ajudar o produtor de flores e plantas ornamentais nos maiores desafios de seu negócio, criamos através de um sistema que utiliza técnicas de visão e inteligência artificial, a Máquina Seletora de Mudas.</p>
-                <p>Seu mecanismo personalizável possibilita que o produtor ajuste a seleção das mudas conforme seus próprios padrões de qualidade, podendo classificar e separar as mudas em diversos níveis, de forma rápida e consistente.</p>
+                <p>Para ajudar o produtor de flores e plantas ornamentais nos maiores desafios de seu negócio, criamos através de um sistema que utiliza <strong>técnicas de visão e inteligência artificial</strong>, a Máquina Seletora de Mudas.</p>
+                <p>Seu mecanismo personalizável possibilita que o produtor ajuste a seleção das mudas conforme <strong>seus próprios padrões de qualidade</strong>, podendo classificar e separar as mudas em diversos níveis, de forma rápida e consistente.</p>
                 <p>A máquina funciona para diversos tipos de mudas, como violetas, kalanchoê, crisântemo, begônia, antúrio e muitas outras!</p>
               </div>
               <div class="col-lg-6">
@@ -292,28 +286,28 @@
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <h4 class="how-works-title">01. Alimentação</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">O critério de seleção é totalmente personalizável e pode ser feito de forma manual (o produtor define as faixas de tamanho para cada nível) ou automática, através da funcionalidade de aprendizado artificial.</p>
+                  <p class="how-works-text text-justify">A alimentação da máquina é feita manualmente assim que a muda é retirada da bandeja e preparada para plantio.</p>
                 </div>
               </div>
               <div class="row">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <h4 class="how-works-title">02. Classificação</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Os tomates muito pequenos são removidos previamente por um sistema de rolos fixos ou no próprio polidor. A alimentação é feita dosando a quantidade de tomates em cada linha da máquina de forma ajustável.</p>
+                  <p class="how-works-text text-justify">O processamento da imagem permite que a máquina extraia diversas características das mudas, tais como: tamanho, espessura, área foliar e cor. O uso desse conjunto de características permite uma classificação mais precisa da muda.</p>
                 </div>
               </div>
               <div class="row">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">03. Separação</h4>
+                  <h4 class="how-works-title">03. Aprendizado automático</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Após a singularização dos tomates nos carrinhos, a calibradora faz uma série de 8 fotografias de cada fruto, em posições diferentes, garantindo uma inspeção 360º.</p>
+                  <p class="how-works-text text-justify">O critério de seleção é personalizado pelo próprio produtor. A Máquina Seletora de Mudas possui um modo de aprendizado no qual o produtor faz primeiro uma seleção manual das mudas e apresenta esses exemplos à máquina. Ela memoriza esses exemplos e então está apta a selecionar as mudas reproduzindo o padrão do produtor.</p>
                 </div>
               </div>
               <div class="row">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">04. Aprendizado automático</h4>
+                  <h4 class="how-works-title">04. Separação</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Por meio de um algoritmo sofisticado, a calibradora avalia o tamanho de cada tomate, sua cor e eventuais defeitos na casca ou na forma. Uma vez definida a classe do tomate, ele é soprado no respectivo compartimento.</p>
+                  <p class="how-works-text text-justify">A máquina então faz a classificação de acordo com o olhar do produtor. Isso também possibilita que diversas novas variedades de plantas sejam classificadas.</p>
                 </div>
               </div>
             </div>
@@ -330,8 +324,8 @@
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
                 <div class="body">
-                  <h4 class="title">Controle de qualidade</h4>
-                  <p>A calibradora eletrônica remove os tomates com imperfeições na forma ou na casca, e também aqueles com coloração indesejada, garantindo a qualidade dos frutos que serão embalados. A classificação dos saudáveis em até 6 níveis de tamanho garante uma padronização excepcional.</p>
+                  <h4 class="title">Padronização da Produção</h4>
+                  <p>Plante lotes padronizados, assim sua produção cresce de maneira uniforme e homogênea. Isso reduz trabalho nas etapas de desenvolvimento da planta, otimiza o espaço da estufa e o uso de insumos.</p>
                 </div>
               </div>
             </div>
@@ -340,7 +334,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
                 <div class="body">
                   <h4 class="title">Redução de mão-de-obra</h4>
-                  <p>A calibradora elimina a necessidade de inspeção e separação manual dos produtos, realizando a classificação com precisão e consistência. Realoque seus colaboradores para outras fases da produção.</p>
+                  <p>Elimina a necessidade de seleção manual das mudas, permitindo que seus funcionários sejam realocados em outras fases da produção. Além disso, a seleção da máquina é feita com maior precisão e consistência.</p>
                 </div>
               </div>
             </div>
@@ -348,8 +342,8 @@
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-2.svg"></span>
                 <div class="body">
-                  <h4 class="title">Configuração automática</h4>
-                  <p>O critério de classificação da máquina pode ser ajustado a partir de exemplos separados por você. Capacidade ilimitada para o armazenamento de configurações. Crie treinos para separar seus frutos nos mais variados estágios de desenvolvimento da planta.</p>
+                  <h4 class="title">Aumento de produtividade</h4>
+                  <p>Análises feitas com os clientes que estão usando a máquina apontam um ganho em 35% no processo de seleção de mudas (em comparação com o processo manual), e um aumento de 20% na produtividade total.</p>
                 </div>
               </div>
             </div>
@@ -358,7 +352,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
                 <div class="body">
                   <h4 class="title">Relatórios detalhados</h4>
-                  <p>As calibradoras eletrônicas da MVisia garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, entre outras informações).</p>
+                  <p>A Máquina Seletora de Mudas oferece um maior controle da sua produção, produzindo relatórios com a contagem de mudas por dia, semana, mês, etc. e por funcionário. Isso auxilia no planejamento e na melhoria de seu negócio, dando também a opção de estabelecer metas para um grupo e bonificações para funcionários com melhores aproveitamentos.</p>
                 </div>
               </div>
             </div>
@@ -383,11 +377,11 @@
           <div class="separator-2"></div>        
           <div class="col-md-12">
             <ul>
-              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Produtividade de até 600 kg/hora;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Até 6 classificações de tamanho + 1 para defeitos + 1 para tomates verdes;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Alimentação 220 V;</li>
+              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Velocidade de 3600 mudas por hora;</li>
+              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Até 6 separações (5 classificações + 1 refugo);</li>
+              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Utiliza alimentação da rede comum (220V);</li>
               <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>É necessário instalar/ter linha de ar comprimido;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
+              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Aceita qualquer tipo de muda gerada por estaquia.</li>
             </ul>
           </div>
         </div>
@@ -399,9 +393,9 @@
           <div class="container">
             <h3 class="title-subsection">Veja outros cases</h3>
             <div class="separator-2 mb-30"></div>   
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-sistema-uvas.html">Sistema automático de qualificação de uvas<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-mudas-florestais.html">Seletora automática de mudas florestais<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-mudas-flores.html">Seletora automática de mudas de flores<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-sistema-qualificacao-uvas.html">Sistema automático de qualificação de uvas<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-eucalipto.html">Seletora automática de mudas de eucalipto<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-flores.html">Calibradora eletrônica de tomates miúdos<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
       <!-- section others end -->
