--- a/template/page-case-sistema-qualificacao-uvas.html
+++ b/template/page-case-sistema-qualificacao-uvas.html
@@ -126,7 +126,7 @@
 
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="index.html" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
+                    <a href="#" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
                   </div>
 
                 </div>
@@ -213,11 +213,11 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg" style="background-image:url('images/page-tech-1-banner.png'); background-position: 50% 27%;">
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-case-3-banner.png'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
-              <h2 class="title">Câmeras Hiperespectrais</h2>
+              <h2 class="title">Sistema automático de qualificação de uvas</h2>
               <div class="separator"></div>
             </div>
           </div>
@@ -230,59 +230,169 @@
       <section class="main-container padding-bottom-clear">
 
         <!-- section text start -->
+        <div class="section">
           <div class="container">
             <div class="row">
-              <div class="col-lg-6 text-justify mb-20">
-                <p>Olhe para o seu braço por um instante e pense no que acabou de ver. É bem provável que os seus olhos tenham registrado aspectos como a cor, o tamanho e o formato dele. A ausência ou a presença de pelos – assim como a cor destes – provavelmente também foi notada. Talvez uma ou outra veia mais saltada também não tenha passado despercebida aos seus olhos.</p>
-                <p>Todas essas características do seu braço só puderam ser identificadas por você graças à habilidade ocular de interpretar as interações entre a luz e os objetos. Mas há muitas outras informações, propriedades e características do seu braço que passam despercebidas aos olhos. Eles não conseguem enxergar, por exemplo, radiações ultravioletas e infravermelhas e, por isso, muitas informações permanecem invisíveis a eles.</p>
-                <p>Agora, imagine esse mesmo braço sendo observado por uma camêra de tecnologia de ponta, como é o caso de uma câmera hiperespectral. O que poderia ser constatado? A resposta é: quase tudo.</p>
+              <div class="col-lg-6 text-justify mb-30">
+                <p>A MVisia desenvolveu um <strong>sistema de qualificação de maturidade de uvas</strong> através de um ensaio não destrutivo. Esta avaliação da qualidade de uvas por imagem é feita analisando a sua maturidade e atualmente está sendo aplicada na região interiorana do estado do Rio Grande do Sul.</p>
+                <p>Esta análise é feita através de um <strong>processamento de fotos tiradas por uma câmera industrial que capta em tempo real as imagens.</strong></p>
               </div>
               <div class="col-lg-6">
                 <div class="special-container">
-                  <div class="overlay-container overlay-visible rounded">
-                    <img src="images/page-case-1-1.png" alt="">
+                  <div class="owl-carousel content-slider-with-controls">
+                    <div class="overlay-container overlay-visible rounded">
+                      <img src="images/page-case-3-1.png" alt="uvas-1">
+                    </div>
+                    <div class="overlay-container overlay-visible">
+                      <img src="images/page-case-3-2.png" alt="uvas-2">
+                    </div>
+                    <div class="overlay-container overlay-visible">
+                      <img src="images/page-case-3-3.png" alt="uvas-3">
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+        </div>
         <!-- section text end -->
 
-        <!-- section text start -->
-        <div class="section">
+        <!-- section video start -->
+        <!--<div class="light-gray-bg pv-70 section mt-60">
           <div class="container">
-            <div class="row">
-              <div class="col-lg-12 text-justify">
-                <p>Uma câmera hiperespectral é tão potente que poderia enxergar em detalhes os padrões das suas veias. Ela poderia até mesmo observar as diferenças na intensidade da coloração da pele, identificando possíveis tumores ou problemas de saúde nela.</p>
-                <p>Isso acontece porque câmeras hiperespectrais conseguem observar e interpretar muito mais informações sobre as interações entre a luz e o seu braço do que os seus olhos ou câmeras comuns. Enquanto olhos e câmeras comuns são capazes apenas de enxergar alguns comprimentos de luz e espectros, câmeras hiperespectrais são dotadas de tecnologia capaz de observar centenas de milhares de espectros de luz de um mesmo objeto ou material. Dessa forma, elas conseguem até mesmo distinguir a composição química dos materiais ou objetos analisados.</p>
-                <p>Essa capacidade visual inigualável das câmeras hiperespectrais traz óbvias vantagens a diversos setores da sociedade – como é o caso do <strong>setor agrícola.</strong></p>
-                <p>Um produtor de tomate que usa a tecnologia hiperespectral consegue identificar a ausência de nutrientes em seus tomates logo no início do processo, sendo possível, assim,  corrigir uma colheita aquém do ideal. Um produtor de eucaliptos que usa máquinas com câmeras hiperespectrais vai conseguir identificar o estado de saúde e a presença de doenças já nas mudas da planta.</p>
-                <p>Ao permitir que o produtor tenha acesso a informações muito mais precisas sobre os seus produtos, a tecnologia hiperespectral antecipa problemas e soluções e garante o aumento da eficiência e da qualidade do produto final.</p>
+            <h3 class="title-subsection">Veja em funcionamento</h3>
+            <div class="separator-2"></div>
+            <div class="video-case">
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/aq4SkI2Lck4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </div>-->
+        <!-- section video end -->
+
+        <!-- section how works start -->
+        <div class="mt-20 pv-70 ph-20 section">
+          <div class="container">
+            <h3 class="title-subsection">Como funciona</h3>
+            <div class="separator-2"></div> 
+            <div class="row mt-60">
+              <div class="col-lg-6 col-md-6 m-auto">
+                <img class="main-img-case mt-20 mb-20" src="images/main-img-case-1.svg">
+              </div>
+            <div class="col-lg-6 col-md-6">
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="how-works-title">01. Calibração</h4>
+                  <div class="separator-2 clearfix"></div>
+                  <p class="how-works-text text-justify">Texto descritivo?</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="how-works-title">02. Alimentação</h4>
+                  <div class="separator-2 clearfix"></div>
+                  <p class="how-works-text text-justify">Texto descritivo?</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="how-works-title">03. Imagem</h4>
+                  <div class="separator-2 clearfix"></div>
+                  <p class="how-works-text text-justify">Texto descritivo?</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="how-works-title">04. Classificação</h4>
+                  <div class="separator-2 clearfix"></div>
+                  <p class="how-works-text text-justify">Texto descritivo?</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <!-- section text end -->
+        </div>
+        <!-- section how works end -->
 
-        <!-- section highlight start -->
-        <div class="light-gray-bg section" style="background-image:url(images/bg-light-gray-default.png)">
-          <div class="container">
-            <div class="row">      
-              <div class="col-md-12 text-justify mt-10">
-                <p><strong>Aqui na MVISIA, trabalhamos com essa tecnologia de ponta nas nossas máquinas para garantir a maior eficiência possível aos nossos clientes. Quer saber mais sobre como podemos aplicar essa tecnologia ao seu negócio? Sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
+      <!-- section benefits start -->
+      <div class="dark-bg pv-70 section">
+        <div class="container">
+          <div class="row">      
+            <div class="col-md-4 mb-30">
+              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
+                <div class="body">
+                  <h4 class="title">Ensaio não destrutivo</h4>
+                  <p>Texto descritivo??</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-30">
+              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
+                <div class="body">
+                  <h4 class="title">Análise de todos os produtos</h4>
+                  <p>Texto descritivo??</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-30">
+              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-2.svg"></span>
+                <div class="body">
+                  <h4 class="title">Processo automatizado</h4>
+                  <p>Texto descritivo??</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-30">
+              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
+                <div class="body">
+                  <h4 class="title">Análise em tempo real</h4>
+                  <p>Texto descritivo??</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-30">
+              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
+                <div class="body">
+                  <h3 class="title">Assistência técnica</h3>
+                  <p>A MVisia é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <!-- section highlight end -->
+      </div>
+      <!-- section benefits end -->
+
+      <!-- section tech details start -->
+      <div class="light-gray-bg pv-55 section" style="background-image:url(images/bg-light-gray-default.png)">
+        <div class="container">
+          <h3 class="title-subsection">Especificações técnicas</h3>
+          <div class="separator-2"></div>        
+          <div class="col-md-12">
+            <ul>
+              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Capacidade de analisar toneladas de uvas por minuto;</li>
+              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Distância variável, de 0,5m até 8m;</li>
+              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Alimentação 220 V;</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- section tech details end -->
 
       <!-- section others start -->
         <div class="pv-70 section mt-20">
           <div class="container">
-            <h3 class="title-subsection">Veja outras tecnologias</h3>
+            <h3 class="title-subsection">Veja outros cases</h3>
             <div class="separator-2 mb-30"></div>   
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-sistema-uvas.html">Visão computacional<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-sistema-uvas.html">Inteligência artificial<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-calibradora.html">Calibradora eletrônica de tomates miúdos<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-eucalipto.html">Seletora automática de mudas de eucalipto<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-flores.html">Seletora automática de mudas de flores<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
       <!-- section others end -->
