--- a/template/page-case-seletora-mudas-eucalipto.html
+++ b/template/page-case-seletora-mudas-eucalipto.html
@@ -213,17 +213,11 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg video-background pv-40 dark-translucent-bg hovered">
-        <div class="video-background-poster" style="background-image: url('');"></div>
-        <video autoplay loop muted style="top: auto; bottom: 0; left: 0;" poster="">
-          <source src="videos/video-case-1.mp4" type="video/mp4">
-          <source src="videos/background-video.webm" type="video/webm">
-        </video>
-        
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-case-4-banner.png'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
-              <h2 class="title">Calibradora eletrônica de tomates miúdos</h2>
+              <h2 class="title">Seletora automática de<br> mudas de eucalipto</h2>
               <div class="separator"></div>
             </div>
           </div>
@@ -240,30 +234,20 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6 text-justify mb-30">
-                <p>Nossa calibradora eletrônica classifica os frutos em diversos tamanhos, além de remover os verdes e os com defeitos, trazendo mais qualidade e padronização para os seus produtos.</p>
-                <p>Obtenha ótimos resultados com qualquer variedade de tomates miúdos, como o grape, morgado, tomini, rosso, etc.</p>
-                <p>Nossas máquinas contam com um <strong>avançado sistema de visão computacional</strong>, desenvolvido com as mais modernas técnicas de processamento de imagem e câmeras industriais, o que garante uma classificação rápida e precisa, chegando a classificar até <strong>90.000 tomates por hora.</strong></p>
+                <p>Nossa seletora automática classifica as mudas de eucalipto em até 6 categorias, utilizando parâmetros como altura, diâmetro do coleto, número de folhas, coloração e presença de doenças, trazendo um rígido controle de qualidade sobre a produção do viveirista.</p>
+                <p>Nossas máquinas contam com um <strong>avançado sistema de visão computacional</strong>, desenvolvido com as mais modernas técnicas de processamento de imagem e câmeras industriais, o que garante uma classificação rápida e precisa, chegando a classificar até <strong>2.200 mudas por hora.</strong></p>
               </div>
               <div class="col-lg-6">
                 <div class="special-container">
                   <div class="owl-carousel content-slider-with-controls">
                     <div class="overlay-container overlay-visible rounded">
-                      <img src="images/page-case-1-1.png" alt="tomate-1">
+                      <img src="images/page-case-4-1.png" alt="eucalipto-1">
                     </div>
                     <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-2.png" alt="tomate-2">
+                      <img src="images/page-case-4-2.png" alt="eucalipto-2">
                     </div>
                     <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-3.png" alt="tomate-3">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-4.png" alt="tomate-4">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-5.png" alt="tomate-5">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-6.png" alt="tomate-6">
+                      <img src="images/page-case-4-3.png" alt="eucalipto-3">
                     </div>
                   </div>
                 </div>
@@ -280,7 +264,7 @@
             <div class="separator-2"></div>
             <div class="video-case">
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/aq4SkI2Lck4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RgVQlLvY89c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -299,30 +283,30 @@
             <div class="col-lg-6 col-md-6">
               <div class="row">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">01. Calibração</h4>
+                  <h4 class="how-works-title">01. Alimentação</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">O critério de seleção é totalmente personalizável e pode ser feito de forma manual (o produtor define as faixas de tamanho para cada nível) ou automática, através da funcionalidade de aprendizado artificial.</p>
+                  <p class="how-works-text text-justify">Um operador coloca as muda em suportes especialmente desenvolvidos para este equipamento, todo processo posterior é feito automaticamente.</p>
                 </div>
               </div>
               <div class="row">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">02. Alimentação</h4>
+                  <h4 class="how-works-title">02. Imagem</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Os tomates muito pequenos são removidos previamente por um sistema de rolos fixos ou no próprio polidor. A alimentação é feita dosando a quantidade de tomates em cada linha da máquina de forma ajustável.</p>
+                  <p class="how-works-text text-justify">Após a singularização das mudas na esteira, a seletora captura uma foto de cada muda individualmente.</p>
                 </div>
               </div>
               <div class="row">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">03. Imagem</h4>
+                  <h4 class="how-works-title">03. Classificação</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Após a singularização dos tomates nos carrinhos, a calibradora faz uma série de 8 fotografias de cada fruto, em posições diferentes, garantindo uma inspeção 360º.</p>
+                  <p class="how-works-text text-justify">Por meio de um algoritmo sofisticado, a seletora avalia os parâmetros de interesse de cada muda, definidos pelo operador. Uma vez definida a classe da muda, ela é empurrada para seu respectivo compartimento.</p>
                 </div>
               </div>
               <div class="row">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">04. Classificação</h4>
+                  <h4 class="how-works-title">04. Configuração</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Por meio de um algoritmo sofisticado, a calibradora avalia o tamanho de cada tomate, sua cor e eventuais defeitos na casca ou na forma. Uma vez definida a classe do tomate, ele é soprado no respectivo compartimento.</p>
+                  <p class="how-works-text text-justify">Os critérios de seleção são totalmente personalizáveis, o que garante uma padronização de acordo com as necessidades de cada produtor.</p>
                 </div>
               </div>
             </div>
@@ -340,7 +324,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
                 <div class="body">
                   <h4 class="title">Controle de qualidade</h4>
-                  <p>A calibradora eletrônica remove os tomates com imperfeições na forma ou na casca, e também aqueles com coloração indesejada, garantindo a qualidade dos frutos que serão embalados. A classificação dos saudáveis em até 6 níveis de tamanho garante uma padronização excepcional.</p>
+                  <p>A máquina seletora remove as mudas com imperfeições, garantindo a qualidade dos frutos que serão embalados. A classificação dos saudáveis em até 6 níveis de tamanho garante uma padronização excepcional.</p>
                 </div>
               </div>
             </div>
@@ -349,7 +333,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
                 <div class="body">
                   <h4 class="title">Redução de mão-de-obra</h4>
-                  <p>A calibradora elimina a necessidade de inspeção e separação manual dos produtos, realizando a classificação com precisão e consistência. Realoque seus colaboradores para outras fases da produção.</p>
+                  <p>A seletora elimina a necessidade de inspeção e separação manual dos produtos, realizando a classificação com precisão e consistência. Realoque seus colaboradores para outras fases da produção.</p>
                 </div>
               </div>
             </div>
@@ -367,7 +351,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
                 <div class="body">
                   <h4 class="title">Relatórios detalhados</h4>
-                  <p>As calibradoras eletrônicas da MVisia garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, entre outras informações).</p>
+                  <p>As máquinas seletoras da MVisia garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, entre outras informações).</p>
                 </div>
               </div>
             </div>
@@ -392,8 +376,8 @@
           <div class="separator-2"></div>        
           <div class="col-md-12">
             <ul>
-              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Produtividade de até 600 kg/hora;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Até 6 classificações de tamanho + 1 para defeitos + 1 para tomates verdes;</li>
+              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Produtividade de até 2.200 mudas/hora;</li>
+              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Até 6 classes de seleção;</li>
               <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Alimentação 220 V;</li>
               <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>É necessário instalar/ter linha de ar comprimido;</li>
               <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
@@ -409,7 +393,7 @@
             <h3 class="title-subsection">Veja outros cases</h3>
             <div class="separator-2 mb-30"></div>   
             <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-sistema-qualificacao-uvas.html">Sistema automático de qualificação de uvas<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-eucalipto.html">Seletora automática de mudas de eucalipto<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-calibradora.html">Calibradora eletrônica de tomates miúdos<i class="fa fa-angle-double-right"></i></a>
             <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-flores.html">Seletora automática de mudas de flores<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
