--- a/template/page-tech-cameras-visao-computacional.html
+++ b/template/page-tech-cameras-visao-computacional.html
@@ -126,7 +126,7 @@
 
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="#" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
+                    <a href="index.html" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
                   </div>
 
                 </div>
@@ -213,17 +213,11 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg video-background pv-40 dark-translucent-bg hovered">
-        <div class="video-background-poster" style="background-image: url('');"></div>
-        <video autoplay loop muted style="top: auto; bottom: 0; left: 0;" poster="">
-          <source src="videos/video-case-1.mp4" type="video/mp4">
-          <source src="videos/background-video.webm" type="video/webm">
-        </video>
-        
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-tech-2-banner.png'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
-              <h2 class="title">Calibradora eletrônica de tomates miúdos</h2>
+              <h2 class="title">Visão Computacional</h2>
               <div class="separator"></div>
             </div>
           </div>
@@ -236,181 +230,58 @@
       <section class="main-container padding-bottom-clear">
 
         <!-- section text start -->
-        <div class="section">
           <div class="container">
             <div class="row">
-              <div class="col-lg-6 text-justify mb-30">
-                <p>Nossa calibradora eletrônica classifica os frutos em diversos tamanhos, além de remover os verdes e os com defeitos, trazendo mais qualidade e padronização para os seus produtos.</p>
-                <p>Obtenha ótimos resultados com qualquer variedade de tomates miúdos, como o grape, morgado, tomini, rosso, etc.</p>
-                <p>Nossas máquinas contam com um <strong>avançado sistema de visão computacional</strong>, desenvolvido com as mais modernas técnicas de processamento de imagem e câmeras industriais, o que garante uma classificação rápida e precisa, chegando a classificar até <strong>90.000 tomates por hora.</strong></p>
+              <div class="col-lg-6 text-justify mb-20">
+                <p>Pense no “simples” processo de escolher uma fruta no supermercado: você analisa as suas opções com cuidado, dando atenção especial a aspectos da aparência como tamanho, formato e cor. Entre uma banana verde e uma amarela, você provavelmente dará preferência à segunda; uma maçã com manchas ou imperfeições na casca provavelmente será menos atraente aos seus olhos e não será escolhida.</p>
+                <p>Embora aconteça em questão de segundos e seja aparentemente simples, esse processo de escolha é extremamente complexo e elaborado. Ao olhar as frutas com cuidado, o que estamos fazendo de fato é <strong>retirando informações úteis das imagens</strong>. O amarelo da banana é interpretado como um sinal de fruta madura e apetitosa; as manchas, associadas com sujeira ou baixa qualidade. Simples traços ou padrões visuais obtidos pelos olhos são processados pelo nosso cérebro e influenciam as nossas tomadas de decisão.</p>
               </div>
               <div class="col-lg-6">
                 <div class="special-container">
-                  <div class="owl-carousel content-slider-with-controls">
-                    <div class="overlay-container overlay-visible rounded">
-                      <img src="images/page-case-1-1.png" alt="tomate-1">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-2.png" alt="tomate-2">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-3.png" alt="tomate-3">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-4.png" alt="tomate-4">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-5.png" alt="tomate-5">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-6.png" alt="tomate-6">
-                    </div>
+                  <div class="overlay-container overlay-visible rounded">
+                    <img src="images/page-tech-3-1.png" alt="hiperespectrais-1">
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        <!-- section text end -->
+
+        <!-- section text start -->
+        <div class="mb-20">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12 text-justify">
+                <p><strong>A visão computacional</strong> é a área da ciência que visa justamente replicar essa complexidade dos nossos processos visuais e, quando possível, aprimorá-los e torná-los ainda mais sofisticados. O seu objetivo é <strong>desenvolver sistemas</strong> semelhantes à inteligência visual humana – ou seja, sistemas <strong>que possam retirar e analisar informações úteis a partir de imagens</strong>.</p>
+                <p>Atualmente, a tecnologia da visão computacional é aplicada em diversas áreas, como por exemplo no raio-x em exames médicos, na identificação da placa de automóveis em radares e na análise de rótulos de garrafas. Até recentemente, a operação desse tipo de tecnologia era inviável por conta da imensa quantidade de poder de processamento que era exigida dos computadores. Com os avanços na computação, estamos vendo um grande aumento na utilização de sistemas que simulam a nossa visão.</p>
+                <p>O setor agrícola é uma das áreas que mais vêm sendo beneficiadas com esses avanços tecnológicos. Embora máquinas para agricultura tenham começado a utilizar câmeras e sensores já nos anos 80, o desenvolvimento recente de sistemas mais elaborados de visão computacional vêm aumentando ainda mais a eficiência do setor.</p>
+                <p><strong>Aqui na MVISIA</strong>, é exatamente isso o que fazemos: <strong>desenvolvemos tecnologia de visão computacional para nossos equipamentos</strong> e equipamentos de terceiros, <strong>visando aumentar a eficiência</strong> tanto no início do processo ao identificar produtos fora do padrão quanto na separação de produtos baseada na preferência do produtor.</p>
+                <p>Ao capturar uma imagem, nossos computadores podem analisá-la de acordo com diversos parâmetros. Dessa maneira, nosso sistema obtém dados de interesse sobre o material examinado, seja pela sua cor, formato ou por outros critérios pré-estabelecidos. O programa do computador permite que nossas máquinas consigam identificar não somente se algo está fora do normal, como também permite que ajam sobre o sistema de forma a evitar anomalias.</p>
               </div>
             </div>
           </div>
         </div>
         <!-- section text end -->
 
-        <!-- section video start -->
-        <div class="light-gray-bg pv-70 section mt-60">
+        <!-- section highlight start -->
+        <div class="light-gray-bg section" style="background-image:url(images/bg-light-gray-default.png)">
           <div class="container">
-            <h3 class="title-subsection">Veja em funcionamento</h3>
-            <div class="separator-2"></div>
-            <div class="video-case">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/aq4SkI2Lck4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <div class="row">      
+              <div class="col-md-12 text-justify mt-10">
+                <p class="text-call"><strong>Atualmente, trabalhamos com sistemas e máquinas de visão computacional para eucaliptos, tomates, alfaces e uvas, e aceitamos projetos para os mais diversos produtos. Caso tenha interesse em conhecer mais sobre os nossos produtos e tecnologias, sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
               </div>
             </div>
           </div>
         </div>
-        <!-- section video end -->
-
-        <!-- section how works start -->
-        <div class="mt-20 pv-70 ph-20 section">
-          <div class="container">
-            <h3 class="title-subsection">Como funciona</h3>
-            <div class="separator-2"></div> 
-            <div class="row mt-60">
-              <div class="col-lg-6 col-md-6 m-auto">
-                <img class="main-img-case mt-20 mb-20" src="images/main-img-case-1.svg">
-              </div>
-            <div class="col-lg-6 col-md-6">
-              <div class="row">
-                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">01. Calibração</h4>
-                  <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">O critério de seleção é totalmente personalizável e pode ser feito de forma manual (o produtor define as faixas de tamanho para cada nível) ou automática, através da funcionalidade de aprendizado artificial.</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">02. Alimentação</h4>
-                  <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Os tomates muito pequenos são removidos previamente por um sistema de rolos fixos ou no próprio polidor. A alimentação é feita dosando a quantidade de tomates em cada linha da máquina de forma ajustável.</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">03. Imagem</h4>
-                  <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Após a singularização dos tomates nos carrinhos, a calibradora faz uma série de 8 fotografias de cada fruto, em posições diferentes, garantindo uma inspeção 360º.</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">04. Classificação</h4>
-                  <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Por meio de um algoritmo sofisticado, a calibradora avalia o tamanho de cada tomate, sua cor e eventuais defeitos na casca ou na forma. Uma vez definida a classe do tomate, ele é soprado no respectivo compartimento.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        </div>
-        <!-- section how works end -->
-
-      <!-- section benefits start -->
-      <div class="dark-bg pv-70 section">
-        <div class="container">
-          <div class="row">      
-            <div class="col-md-4 mb-30">
-              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
-                <div class="body">
-                  <h4 class="title">Controle de qualidade</h4>
-                  <p>A calibradora eletrônica remove os tomates com imperfeições na forma ou na casca, e também aqueles com coloração indesejada, garantindo a qualidade dos frutos que serão embalados. A classificação dos saudáveis em até 6 níveis de tamanho garante uma padronização excepcional.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-30">
-              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
-                <div class="body">
-                  <h4 class="title">Redução de mão-de-obra</h4>
-                  <p>A calibradora elimina a necessidade de inspeção e separação manual dos produtos, realizando a classificação com precisão e consistência. Realoque seus colaboradores para outras fases da produção.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-30">
-              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-2.svg"></span>
-                <div class="body">
-                  <h4 class="title">Configuração automática</h4>
-                  <p>O critério de classificação da máquina pode ser ajustado a partir de exemplos separados por você. Capacidade ilimitada para o armazenamento de configurações. Crie treinos para separar seus frutos nos mais variados estágios de desenvolvimento da planta.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-30">
-              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
-                <div class="body">
-                  <h4 class="title">Relatórios detalhados</h4>
-                  <p>As calibradoras eletrônicas da MVisia garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, entre outras informações).</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-30">
-              <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
-                <div class="body">
-                  <h3 class="title">Assistência técnica</h3>
-                  <p>A MVisia é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- section benefits end -->
-
-      <!-- section tech details start -->
-      <div class="light-gray-bg pv-55 section" style="background-image:url(images/bg-light-gray-default.png)">
-        <div class="container">
-          <h3 class="title-subsection">Especificações técnicas</h3>
-          <div class="separator-2"></div>        
-          <div class="col-md-12">
-            <ul>
-              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Produtividade de até 600 kg/hora;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Até 6 classificações de tamanho + 1 para defeitos + 1 para tomates verdes;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Alimentação 220 V;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>É necessário instalar/ter linha de ar comprimido;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- section tech details end -->
+        <!-- section highlight end -->
 
       <!-- section others start -->
         <div class="pv-70 section mt-20">
           <div class="container">
-            <h3 class="title-subsection">Veja outros cases</h3>
+            <h3 class="title-subsection">Veja outras tecnologias</h3>
             <div class="separator-2 mb-30"></div>   
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-sistema-qualificacao-uvas.html">Sistema automático de qualificação de uvas<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-eucalipto.html">Seletora automática de mudas de eucalipto<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-flores.html">Seletora automática de mudas de flores<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-cameras-hiperespectrais.html">Câmeras hiperespectrais<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-tech-inteligencia-artificial.html">Inteligência artificial<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
       <!-- section others end -->
