adjusts 18.03 part II

--- a/template/page-tech-cameras-hiperespectrais.html
+++ b/template/page-tech-cameras-hiperespectrais.html
@@ -269,7 +269,7 @@
           <div class="container">
             <div class="row">      
               <div class="col-md-12 text-justify mt-10">
-                <p><strong>Aqui na MVISIA, trabalhamos com essa tecnologia de ponta nas nossas máquinas para garantir a maior eficiência possível aos nossos clientes. Quer saber mais sobre como podemos aplicar essa tecnologia ao seu negócio? Sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
+                <p class="text-call"><strong>Aqui na MVISIA, trabalhamos com essa tecnologia de ponta nas nossas máquinas para garantir a maior eficiência possível aos nossos clientes. Quer saber mais sobre como podemos aplicar essa tecnologia ao seu negócio? Sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
               </div>
             </div>
           </div>
@@ -282,7 +282,7 @@
             <h3 class="title-subsection">Veja outras tecnologias</h3>
             <div class="separator-2 mb-30"></div>   
             <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-visao-computacional.html">Visão computacional<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-tech-inteligencia-artificial.html">Inteligência artificial<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-inteligencia-artificial.html">Inteligência artificial<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
       <!-- section others end -->
