adjusts meta 18.03 part I

--- a/template/index.html
+++ b/template/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<!--[if IE 9]> <html lang="zxx" class="ie9"> <![endif]-->
-<!--[if gt IE 9]> <html lang="zxx" class="ie"> <![endif]-->
-<!--[if !IE]><!-->
-<html dir="ltr" lang="zxx">
-	<!--<![endif]-->
+
+<html class="no-js" lang="pt-BR">
 
   <head>
     <meta charset="utf-8">
-    <title>MVisia - Máquinas de Visão e Inteligência Artificial</title>
-    <meta name="description" content="The Project a Bootstrap-based, Responsive HTML5 Template">
-    <meta name="author" content="htmlcoder.me">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>MVISIA - Máquinas de Visão e Inteligência Artificial</title>
+
+    <meta itemprop="name" content="MVISIA">
+    <meta name="description" content="MVISIA - Máquinas de Visão e Inteligência Artificial">
+    <meta itemprop="image" content="http://www.mvisia.com/.br/images/mvisia-logo.svg">
+    <meta name="keywords" content="mvisia, máquinas de visão computacional, visão computacional agroindústria, máquinas agroindústria, inteligência artificla agroindústria">
 
     <!-- Mobile Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
