--- a/template/index.html
+++ b/template/index.html
@@ -7,10 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>MVISIA - Máquinas de Visão e Inteligência Artificial</title>
 
-    <meta itemprop="name" content="MVISIA">
+    <meta itemprop="name" content="mvisia">
     <meta name="description" content="MVISIA - Máquinas de Visão e Inteligência Artificial">
     <meta itemprop="image" content="http://www.mvisia.com/.br/images/mvisia-logo.svg">
     <meta name="keywords" content="mvisia, máquinas de visão computacional, visão computacional agroindústria, máquinas agroindústria, inteligência artificla agroindústria">
+    
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="mvisia" />
+    <meta property="og:description" content="Máquinas de Visão e Inteligência Artificial" />
+    <meta property="og:url" content="http://mvisia.com.br/" />
+    <meta property="og:site_name" content="mvisia" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="Máquinas de Visão e Inteligência Artificial" />
+    <meta name="twitter:title" content="mvisia" />
+
+    <link rel="canonical" href="http://mvisia.com.br/" />
 
     <!-- Mobile Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -43,16 +55,12 @@
     <link href="plugins/owlcarousel2/assets/owl.theme.default.min.css" rel="stylesheet">
     <link href="plugins/hover/hover-min.css" rel="stylesheet">		
     <link href="plugins/morphext/morphext.css" rel="stylesheet">
-    
-    <!-- The Project's core CSS file -->
-    <!-- Use css/rtl_style.css for RTL version -->
+
     <link href="css/style.css" rel="stylesheet" >
-    <!-- The Project's Typography CSS file, includes used fonts -->
-    <!-- Used font for body: Roboto -->
-    <!-- Used font for headings: Raleway -->
-    <!-- Use css/rtl_typography-default.css for RTL version -->
+
     <link href="css/typography.css" rel="stylesheet" >
-    <!-- Color Scheme (In order to change the color scheme, replace the blue.css with the color scheme that you prefer)-->
+
+    <!-- Color Scheme -->
     <link href="css/skins/green.css" rel="stylesheet">
   
     <!-- Custom css --> 
@@ -63,11 +71,9 @@
   <body class="page-loader-1">
 
     <!-- scrollToTop -->
-    <!-- ================ -->
     <div class="scrollToTop circle"><i class="fa fa-angle-up"></i></div>
 
     <!-- page wrapper start -->
-    <!-- ================ -->
     <div class="page-wrapper">
       <!-- header-container start -->
       <div class="header-container">
