general adjusts 18.03 part II

--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html class="no-js" lang="pt-BR">
+<html dir="ltr" lang="pt-BR">
 
   <head>
     <meta charset="utf-8">
@@ -715,7 +715,7 @@
       <!-- section brazilian end -->
 
       <!-- section media start -->     
-      <div class="dark-translucent-bg pv-45 clearfix" style="background-image:url(images/tech-bg-image-4.png)">
+      <div class="section dark-translucent-bg pv-45 clearfix" style="background-image:url(images/tech-bg-image-4.png)">
         <div class="container">
             <div class="main">
               <h2 class="page-title text-white text-center">Na Mídia</h2>
