--- a/template/css/animations.css
+++ b/template/css/animations.css
@@ -1,22 +1,35 @@
-/*!
-Animate.css - http://daneden.me/animate
-Licensed under the MIT license - http://opensource.org/licenses/MIT
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
 
-Copyright (c) 2014 Daniel Eden
-*/
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
 
-@import url(animate.css);
+  to {
+    opacity: 1;
+  }
+}
 
-/* Theme Name: The Project - Responsive Website Template
-Author:HtmlCoder
-Author URI:http://www.htmlcoder.me
-Author e-mail:htmlcoder.me@gmail.com
-Version:1.4.0
-Created:December 2014
-License URI:http://support.wrapbootstrap.com/
-File Description: Animations */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
 
-/*Custom Animations*/
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+
 
 @-webkit-keyframes fadeInDownSmall {
   0% {
@@ -51,109 +64,4 @@ File Description: Animations */
 .fadeInDownSmall {
   -webkit-animation-name: fadeInDownSmall;
   animation-name: fadeInDownSmall;
-}
-
-@-webkit-keyframes fadeInLeftSmall {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(-20px, 0, 0);
-    transform: translate3d(-20px, 0, 0);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInLeftSmall {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(-20px, 0, 0);
-    -ms-transform: translate3d(-20px, 0, 0);
-    transform: translate3d(-20px, 0, 0);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none;
-  }
-}
-
-.fadeInLeftSmall {
-  -webkit-animation-name: fadeInLeftSmall;
-  animation-name: fadeInLeftSmall;
-}
-
-@-webkit-keyframes fadeInRightSmall {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(20px, 0, 0);
-    transform: translate3d(20px, 0, 0);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInRightSmall {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(20px, 0, 0);
-    -ms-transform: translate3d(20px, 0, 0);
-    transform: translate3d(20px, 0, 0);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none;
-  }
-}
-
-.fadeInRightSmall {
-  -webkit-animation-name: fadeInRightSmall;
-  animation-name: fadeInRightSmall;
-}
-
-@-webkit-keyframes fadeInUpSmall {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 20px, 0);
-    transform: translate3d(0, 20px, 0);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInUpSmall {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 20px, 0);
-    -ms-transform: translate3d(0, 20px, 0);
-    transform: translate3d(0, 20px, 0);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none;
-  }
-}
-
-.fadeInUpSmall {
-  -webkit-animation-name: fadeInUpSmall;
-  animation-name: fadeInUpSmall;
 }
