cleanup custom css 18.03

--- a/template/index.html
+++ b/template/index.html
@@ -398,7 +398,7 @@
             </div>
             <div class="col-lg-6">
               <div class="rounded text-center special-container">
-                <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><img class="image-alone" src="images/about-bg-image2.png" alt="mvisia-youtube-channel"></a>
+                <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><img class="rounded" src="images/about-bg-image2.png" alt="mvisia-youtube-channel"></a>
               </div>
             </div>
           </div>
