--- a/template/css/custom.css
+++ b/template/css/custom.css
@@ -1,13 +1,5 @@
-/* Theme Name: The Project - Responsive Website Template
-Author:HtmlCoder
-Author URI:http://www.htmlcoder.me
-Author e-mail:htmlcoder.me@gmail.com
-Version: 2.0.5
-Created:December 2014
-License URI:http://support.wrapbootstrap.com/
-File Description: Place here your custom CSS styles
-*/
-
+/* Buttons
+---------------------------------- */
 .btn {
     font-weight: 400;
 }
@@ -33,23 +25,6 @@ File Description: Place here your custom CSS styles
     color: white;
 }
 
-.video-case {
-    padding: 30px 50px;
-}
-
-.cta-youtube {
-    font-size: 1.2rem;
-    line-height: 1.25;
-}
-
-h4.text-white.section-caller {
-    font-weight: 200;
-}
-
-.section-text {
-    font-size: 1.0rem;
-}
-
 ul {
     display: block;
     -webkit-margin-start: 0px;
@@ -57,6 +32,35 @@ ul {
     -webkit-padding-start: 0px;
 }
 
+
+/* Wrappers
+---------------------------------- */
+.special-container {
+    margin: 0 30px 0 30px;
+}
+
+.img-container {
+    border-radius: 3px;
+}
+
+
+/* Index
+---------------------------------- */
+.title-about {
+    font-weight: 500;
+}
+
+h3.news-title {
+    font-weight: 500;
+}
+
+.news-body {
+    font-weight: 200;
+}
+
+
+/* Page About
+---------------------------------- */
 .logo-prize {
     height: 75px;
 }
@@ -74,30 +78,13 @@ h3.card-title {
     color: white;
 }
 
-.tech-detail {
-    float: left;
+.separator-custom {
+    margin-bottom: 15px;
 }
 
-#benefits, #technology-section {
-    box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.5);
-}
 
-.image-alone {
-    border-radius: 5px;
-}
-
-.title-about {
-    font-weight: 500;
-}
-
-.special-container {
-    margin: 0 30px 0 30px;
-}
-
-.img-container {
-    border-radius: 3px;
-}
-
+/* Contact Banner
+---------------------------------- */
 .banner .list-inline-item{
     font-size: 1.0rem;
 }
@@ -106,14 +93,13 @@ h3.card-title {
     font-size: 1.1rem;
 }
 
-h3.news-title {
-    font-weight: 500;
+.small {
+    line-height: 0.9rem;
 }
 
-.news-body {
-    font-weight: 200;
-}
 
+/* Icons
+---------------------------------- */
 .feature-box-2 .icon.icon-benefit {
     top: -10px;
     left: 5px;
@@ -131,6 +117,8 @@ h3.news-title {
     height: 35px;
 }
 
+/* Intern Typography
+---------------------------------- */
 h3.title-subsection {
     font-weight: 500;
     font-size: 1.5rem;
@@ -140,10 +128,9 @@ h3.title-subsection {
     text-align: left;
 }
 
-.small {
-    line-height: 0.9rem;
-}
 
+/* Page Cases
+---------------------------------- */
 .how-works-title {
     font-size: 1.2rem;
     font-weight: 500;
@@ -154,19 +141,9 @@ h3.title-subsection {
     margin-bottom: 0;
 }
 
-.ml-30 {
-    margin-left: 30px;
-}
 
-h4.title {
-    font-size: 1.2rem;
-    margin-left: 50px;
-}
-
-.separator-custom {
-    margin-bottom: 15px;
-}
-
+/* Page Technologies
+---------------------------------- */
 .text-call {
     font-size: 1.1rem;
     color: #2f2f2f;
