--- a/template/css/typography.css
+++ b/template/css/typography.css
@@ -65,6 +65,12 @@ h2.title {
   font-size: 2.5rem;
 }
 
+h4.title {
+  font-size: 1.2rem;
+  margin-left: 50px;
+}
+
+
 .text-white h1,
 .text-white h2,
 .text-white h3,
