cleanup style css 18.03 part I

--- a/template/page-about.html
+++ b/template/page-about.html
@@ -249,7 +249,7 @@
 
         <!-- section start -->
         <div class="dark-bg section mt-60">
-          <div class="container ph-40">
+          <div class="container">
             <div class="row">
               <div class="col-sm-12 text-center">
                 <h4 class="text-white mt-30 mb-30">Temos experiência nas seguintes abordagens tecnológicas:</h4>
