--- a/template/index.html
+++ b/template/index.html
@@ -394,7 +394,7 @@
               <p>A MVisia desenvolve <strong>máquinas e sistemas baseados em visão computacional e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.</p>
               <p>O princípio de nossas soluções é um sistema que captura imagens e as envia para um software de análise, que considera <strong>parâmetros relevantes para a seleção de cada produto</strong>. Desenvolvemos também a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>
               <p>Trazemos <strong>eficiência, redução de custos e aumento de qualidade</strong> para sistemas de produção da <strong>agroindústria</strong>, utilizando <strong>visão computacional e inteligência artificial.</strong></p>
-              <a class="btn radius-2 btn-transparent btn-hvr btn-animated btn-bordered-green" href="page-about.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-hvr btn-animated btn-bordered-green" href="page-about.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
             <div class="col-lg-6">
               <div class="rounded text-center special-container">
@@ -715,7 +715,7 @@
       <!-- section brazilian end -->
 
       <!-- section media start -->     
-      <div class="section dark-translucent-bg pv-45 clearfix" style="background-image:url(images/tech-bg-image-4.png)">
+      <div class="section dark-translucent-bg pv-55 clearfix" style="background-image:url(images/tech-bg-image-4.png)">
         <div class="container">
             <div class="main">
               <h2 class="page-title text-white text-center">Na Mídia</h2>
@@ -822,11 +822,11 @@
             <div class="separator"></div>
             <div class="row">
               <div class="col-md-12 text-center">
-                <ul class="list-inline mb-40">
-                  <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1 bigger"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-                  <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1 bigger"></i>(+55) (11) 4302-5902</li>
-                  <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1 bigger"></i>contato@mvisia.com.br</li>
-                  <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1 bigger"></i>(+55) (11) 98134-9727</li>
+                <ul class="list-inline mb-30">
+                  <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1 bigger mt-10 mb-10"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+                  <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1 bigger mt-10 mb-10"></i>(+55) (11) 4302-5902</li>
+                  <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1 bigger mt-10 mb-10"></i>contato@mvisia.com.br</li>
+                  <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1 bigger mt-10 mb-10"></i>(+55) (11) 98134-9727</li>
                 </ul>
               </div>
             </div>
